add iframe to the thing, localize logo, utilize iframe for page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="navContainer">
 	  <div class="nav">
 	    <div class="title">
-	  		  <img src="http://www.me.gatech.edu/files/branding/logos/GeorgiaTechLogo-rv-black.png" id="logo">
+	  		  <img src="blackGTLogo.png" id="logo">
 	          <div>
 	            ALGAE FARMS
 	          </div>
