--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<link rel="stylesheet" type="text/css" href="mainPage.css">
-	<script language="javascript" type="text/javascript" src="jquery-1.8.3.js"></script> 
-	<script src="js/contentLoad.js"></script>
 	<meta charset="utf-8">
 	<title>GT Algae Farms</title>
 </head>
@@ -18,25 +17,25 @@
 	    </div>
 	    
 	  	<ul class="mainNavTabs">
-	      <li class="algae" data-page="contentPages/algae.txt">
-	        <a href="contentPages/algae.html">ALGAE</a>
+	      <li class="algae" data-page="contentPages/algae.html">
+	        <a href="#">ALGAE</a>
 	      </li>
 	  	  <li class="labs" data-page="contentPages/labs.html">
-	        <a href="contentPages/labs.html">LABS</a>
+	        <a href="#">LABS</a>
 	      </li>
 	  	  <li class="blog" data-page="contentPages/blog.html">
-	          <a href="/blog.html">BLOG</a>
+	          <a href="#">BLOG</a>
 	      </li>
 	  	  <li class="papers" data-page="contentPages/papers.html">
-	          <a href="/papers.html">PAPERS</a>
+	          <a href="#">PAPERS</a>
 	      </li>
 	  	</ul>
 	  	<ul class="secondaryNavTabs">
 	      <li class="photos" data-page="contentPages/photos.html">
-	        <a href="/photos.html">PHOTOS</a>
+	        <a href="#">PHOTOS</a>
 	      </li>
 	  	  <li class="contact" data-page="contentPages/contact.html">
-	          <a href="/contact.html">CONTACT</a>
+	          <a href="#">CONTACT</a>
 	      </li>  		
 	  	</ul>
 	  	<ul class="socialMediaSharing">
@@ -60,5 +59,7 @@
     <div class="rightBand"></div>
   </div>
   <div class="page"></div>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="js/contentLoad.js"></script>
 </body>
 </html>
