getting closer to usable

--- a/contentPages/photos.html
+++ b/contentPages/photos.html
@@ -1,3 +1,15 @@
-photos
-
-This is where all your photos are
+<script type="text/javascript">
+	var dir = "images/photos_page";
+	var fileextension = ".png";
+	$.ajax({
+	    //This will retrieve the contents of the folder if the folder is configured as 'browsable'
+	    url: dir,
+	    success: function (data) {
+	        //Lsit all png file names in the page
+	        $(data).find("a:contains(" + fileextension + ")").each(function () {
+	            var filename = this.href.replace(window.location.host, "").replace("http:///", "");
+	            $('.page').append($("<img src=" + dir + filename + "></img>"));
+	        });
+	    }
+	});
+</script>
