--- a/contentPages/photos.html
+++ b/contentPages/photos.html
@@ -1,11 +1,11 @@
 <div class="clearfix">
-	<img src="images/photos_page/photos_lab_1.JPG"></img>
-	<img src="images/photos_page/photos_tanks_4.JPG"></img>
-	<img src="images/photos_page/photos_lab_2.JPG"></img>
-	<img src="images/photos_page/photos_tanks_2.JPG"></img>
-	<img src="images/photos_page/photos_lab_3.JPG"></img>
-	<img src="images/photos_page/photos_lab_4.JPG"></img>
-	<img src="images/photos_page/photos_lab_5.JPG"></img>
-	<img src="images/photos_page/photos_tanks.JPG"></img>
-	<img src="images/photos_page/photos_tanks_3.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_lab_1.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_tanks_4.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_lab_2.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_tanks_2.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_lab_3.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_lab_4.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_lab_5.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_tanks.JPG"></img>
+	<img class="farm-lab-photos" src="images/photos_page/photos_tanks_3.JPG"></img>
 </div>
