--- a/contentPages/algae.html
+++ b/contentPages/algae.html
@@ -1,1 +1,1 @@
-<p> this be some algae or something </p>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
